Closed
Bug 240936
Opened 21 years ago
Closed 21 years ago
--disable-profilelocking option does not work
Categories
(Core Graveyard :: Profile: BackEnd, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: wind.li, Assigned: wind.li)
References
Details
Attachments
(1 file, 1 obsolete file)
1.99 KB,
patch
|
ccarlen
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113
nsProfile.cpp ignore this option
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
if --disable-profilelocking is not setted then
will not be defined MOZ_PROFILELOCKING
Attachment #146479 -
Flags: review?(brendan)
I am working for OOo, we use Mozilla components to access addressbooks in OOo in
nearly readonly mode.
See http://dba.openoffice.org and
http://qa.openoffice.org/issues/show_bug.cgi?id=11424 for detail.
So we need build a Mozilla without profile locking function. I found that there
is a config option --disable-profilelocking. But it does not work. So I make
this patch.
Blocks: 213274
Comment 3•21 years ago
|
||
Comment on attachment 146479 [details] [diff] [review]
add --disable-profilelocking support to nsProfile.cpp
I'm not a module owner or peer for profile. Wind, please follow the rules in
http://www.mozilla.org/hacking/.
/be
Attachment #146479 -
Flags: review?(brendan) → review?(ccarlen)
Comment on attachment 146479 [details] [diff] [review]
add --disable-profilelocking support to nsProfile.cpp
+ #endif
^ errant whitespace
Assignee: nobody → wind.li
Component: Build Config → Profile Manager BackEnd
QA Contact: core.build-config → core.profile-manager-backend
Comment 6•21 years ago
|
||
Comment on attachment 146482 [details] [diff] [review]
remove the space
r=ccarlen.
I think somebody added --disable-profilelocking to support only the
--enable-single-profile config (where there is no profile mgr) for minimo. This
makes it work in any case.
Attachment #146482 -
Flags: review+
ccarlen
Can you please suggest a superreviewer?
Thanks
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•21 years ago
|
Attachment #146482 -
Flags: superreview+
Comment 8•21 years ago
|
||
Comment on attachment 146479 [details] [diff] [review]
add --disable-profilelocking support to nsProfile.cpp
removing obsolete review req.
Attachment #146479 -
Flags: review?(ccarlen)
fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•