Bug 240936 --disable-profilelocking option does not work r=ccarlen, sr=bienvenu, patch by wind.li@sun.com